# fluxcrystal

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ping_bot.py  yuri_bot.py
src/fluxcrystal/: __init__.py  bot.py  cache.py  endpoint_client.py  endpoints.py  errors.py  gateway.py
src/fluxcrystal/events/: __init__.py  base.py  channels.py  gateway.py  guilds.py  messages.py
src/fluxcrystal/models/: __init__.py  channels.py  guilds.py  messages.py  upload.py  users.py
